--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 </head>
 
 <body>
-    <img src="./images/meTokyo.jpg" alt="me in Tokyo">
-    <h1>Hi, I'm Charly!</h1>
+    <div id="homepage">
+        <div id="title">
+            <img src="./images/meTokyo.jpg" alt="me in Tokyo">
 
-    <!-- <h2>Welcome to my Portfolio Website!</h2>
-    <p>A paragraph about me.</p>
-    <h3>Some things I like:</h3>
-    <ul>
-        <li>coding</li>
-        <li>photography</li>
-        <li>crotchet</li>
-        <li>bouldering</li>
-    </ul> -->
+            <h1>Hi, I'm Charly!</h1>
+        </div>
+        <div id="interests">
+            <h2>Some things I like:</h2>
+            <ul>
+                <li>coding</li>
+                <li>photography</li>
+                <li>crotchet</li>
+                <li>bouldering</li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
