adds in contact section and projects

--- a/index.html
+++ b/index.html
@@ -14,18 +14,26 @@
             <img src="./images/meTokyo.jpg" alt="me in Tokyo">
             <div id="name-and-description">
                 <h1>Charly Mannion</h1>
-                <p>I am a full stack developer and current student at Northcoders, a Coding Bootcamp. After completing a History degree, I worked as a Finance Technology Consultant at EY and RBS before deciding to pursue a career as a developer.
-                </p>
                 <p>
-                    I am a flexible thinker, a keen learner, and I have a curiosity for both people and tech. I am drawn to coding as I find the problem-solving and collaborative working style to be fun, rewarding and satisfying. I am excited to start my first role after
-                    a period absence from work due to personal matters. This experience strengthened my resolve to become a skilled engineer.
+                    I'm a flexible thinker, a keen learner, and I have a curiosity for people and tech. I am drawn to coding as I find the problem-solving and collaborative working style to be fun, rewarding and satisfying.
                 </p>
             </div>
         </div>
-        <div id="interests">
-            <h2>Some things I like:</h2>
+        <div id="contact">
+            <h2>Contact Me</h2>
+        </div>
+        <div id="projects">
+            <h2>Projects</h2>
             <ul>
-                <li>coding</li>
+                <li>Back End</li>
+                <li>Front End</li>
+                <li>Final Project</li>
+
+            </ul>
+        </div>
+        <div id="interests">
+            <h2>Interests</h2>
+            <ul>
                 <li>photography</li>
                 <li>crotchet</li>
                 <li>bouldering</li>
