adds links to contact section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,28 @@
         </div>
         <div id="contact">
             <h2>Contact Me</h2>
+            <p align="center">
+
+                <a href="mailto:charlottemannion100@gmail.com">
+                    <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></a>
+
+
+                <a href="https://www.linkedin.com/in/charly-mannion-75483523/">
+                    <img src="https://www.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt="linkedin" hspace="50" height="42" width="42"></a>
+
+                <a href="https://github.com/CharlyMannion/CMannion_CV/">
+                    <img src="https://cdn2.iconfinder.com/data/icons/identificon/96/cv-512.png" alt="CV" hspace="50" height="42" width="42"></a>
+
+                <a href="https://github.com/CharlyMannion">
+                    <img src="./images/iconfinder_social_media_logo_github_1221585.png" alt="github" hspace="50" height="42" width="42"></a>
+
+                <a href="https://twitter.com/Charly_Mannion">
+                    <img src="./images/iconfinder_twitter_circle_294709.png" alt="twitter" hspace="50" height="42" width="42"></a>
+
+
+            </p>
         </div>
-        <div id="projects">
+        <!-- <div id="projects">
             <h2>Projects</h2>
             <ul>
                 <li>Back End</li>
@@ -30,15 +50,15 @@
                 <li>Final Project</li>
 
             </ul>
-        </div>
-        <div id="interests">
+        </div> -->
+        <!-- <div id="interests">
             <h2>Interests</h2>
             <ul>
                 <li>photography</li>
                 <li>crotchet</li>
                 <li>bouldering</li>
             </ul>
-        </div>
+        </div> -->
     </div>
 </body>
 
