--- a/index.html
+++ b/index.html
@@ -14,43 +14,44 @@
             <img src="./images/meTokyo.jpg" alt="me in Tokyo">
             <div id="name-and-description">
                 <h1>Charly Mannion</h1>
-                <p>
-                    I'm a flexible thinker, a keen learner, and I have a curiosity for people and tech. I am drawn to coding as I find the problem-solving and collaborative working style to be fun, rewarding and satisfying.
-                </p>
+            </div>
+        </div>
+        <div id="container">
+            <h2>Projects</h2>
+
+            <div id="projects">
+                <div class="project">
+                    <img src="" class="img-responsive img-thumbnail" alt="Back end" />
+                    <div class="project-name">Name
+                        <br />Description</div>
+                </div>
+                <div class="project">
+                    <img src="" class="img-responsive img-thumbnail" alt="front end" />
+                    <div class="project-name">Name
+                        <br />Description</div>
+                </div>
+                <div class="project">
+                    <img src="" class="img-responsive img-thumbnail" alt="final project" />
+                    <div class="project-name">Name
+                        <br />Description</div>
+                </div>
             </div>
         </div>
         <div id="contact">
             <h2>Contact Me</h2>
             <p align="center">
-
                 <a href="mailto:charlottemannion100@gmail.com">
                     <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></a>
-
-
                 <a href="https://www.linkedin.com/in/charly-mannion-75483523/">
                     <img src="https://www.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt="linkedin" hspace="50" height="42" width="42"></a>
-
                 <a href="https://github.com/CharlyMannion/CMannion_CV/">
                     <img src="https://cdn2.iconfinder.com/data/icons/identificon/96/cv-512.png" alt="CV" hspace="50" height="42" width="42"></a>
-
                 <a href="https://github.com/CharlyMannion">
                     <img src="./images/iconfinder_social_media_logo_github_1221585.png" alt="github" hspace="50" height="42" width="42"></a>
-
                 <a href="https://twitter.com/Charly_Mannion">
                     <img src="./images/iconfinder_twitter_circle_294709.png" alt="twitter" hspace="50" height="42" width="42"></a>
-
-
             </p>
         </div>
-        <!-- <div id="projects">
-            <h2>Projects</h2>
-            <ul>
-                <li>Back End</li>
-                <li>Front End</li>
-                <li>Final Project</li>
-
-            </ul>
-        </div> -->
         <!-- <div id="interests">
             <h2>Interests</h2>
             <ul>
