refactors and adds descriptots to css file

--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
                 </div>
             </div>
         </div>
-        <div id="container" data-aos="fade-in" data-aos-delay="300">
+        <div id="container" data-aos="fade-in" data-aos-delay="150">
             <h2>Interests</h2>
 
-            <div id="projects">
-                <div class="project">
+            <div id="interests">
+                <div class="interest">
                     <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="Crochet" />
                     <!-- <div class="project-name">Crochet</div> -->
                 </div>
-                <div class="project">
+                <div class="interest">
                     <img src="./images/bouldering.jpg" class="img-responsive img-thumbnail" alt="Climbing" />
                     <!-- <div class="project-name">Climbing</div> -->
                 </div>
-                <div class="project">
+                <div class="interest">
                     <img src="./images/beach2.jpg" class="img-responsive img-thumbnail" alt="Photography" />
                     <!-- <div class="project-name">Photography</div> -->
                 </div>
             </div>
         </div>
-        <div id="contact" data-aos="fade-in" data-aos-delay="300">
+        <div id="contact" data-aos="fade-in" data-aos-delay="150">
             <p align="center">
                 <a href="mailto:charlottemannion100@gmail.com">
                     <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></a>
