adds links to github placeholder projects

--- a/index.html
+++ b/index.html
@@ -23,19 +23,24 @@
 
             <div id="projects">
                 <div class="project">
-                    <img src="" class="img-responsive img-thumbnail" alt="Back end" />
-                    <div class="project-name">Name
-                        <br />Description</div>
+                    <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="Back end" />
+                    <div class="project-name">
+                        <a href="https://github.com/CharlyMannion">Back End</a>
+                    </div>
                 </div>
                 <div class="project">
-                    <img src="" class="img-responsive img-thumbnail" alt="front end" />
-                    <div class="project-name">Name
-                        <br />Description</div>
+                    <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="front end" />
+                    <div class="project-name">
+                        <a href="https://github.com/CharlyMannion">Front End</a>
+
+                    </div>
                 </div>
                 <div class="project">
-                    <img src="" class="img-responsive img-thumbnail" alt="final project" />
-                    <div class="project-name">Name
-                        <br />Description</div>
+                    <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="final project" />
+                    <div class="project-name">
+                        <a href="https://github.com/CharlyMannion">Final Project</a>
+
+                    </div>
                 </div>
             </div>
         </div>
