puts projects into a collumn

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
             <h2>Projects</h2>
 
             <div id="projects">
-                <div class="project">
+                <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="Back end" />
                     <div class="project-name">
                         <a href="https://github.com/CharlyMannion">Back End</a>
                     </div>
                 </div>
-                <div class="project">
+                <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="front end" />
                     <div class="project-name">
                         <a href="https://github.com/CharlyMannion">Front End</a>
 
                     </div>
                 </div>
-                <div class="project">
+                <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="final project" />
                     <div class="project-name">
                         <a href="https://github.com/CharlyMannion">Final Project</a>
