--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Peddana&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+
 </head>
 
 <body>
@@ -15,20 +17,149 @@
         <div id="title" data-aos="fade-in" data-aos-delay="300">
             <img src="./images/meTokyo.jpg" alt="me in Tokyo">
             <div id="name-and-description">
-                <h1>Charly</h1>
+                <h1>Charly Mannion</h1>
+                <p>Software Engineer</p>
+            </div>
+        </div>
+        <div id="skills" data-aos="fade-in" data-aos-delay="300">
+            <div id="section header" data-aos="fade-in" data-aos-delay="300">
+                <h2>SKILLS</h2>
+            </div>
+            <div id="skill-body" data-aos="fade-in" data-aos-delay="300">
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-javascript-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Javascript</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-nodejs-plain"></i>
+                    </div>
+                    <div>
+                        <h3>nodejs</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-react-original"></i>
+                    </div>
+                    <div>
+                        <h3>React</h3>
+                    </div>
+                </div>
+                <br>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-ruby-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Ruby</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-swift-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Swift</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-github-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Github</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-css3-plain"></i>
+                    </div>
+                    <div>
+                        <h3>CSS</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-html5-plain"></i>
+                    </div>
+                    <div>
+                        <h3>HTML</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-postgresql-plain"></i>
+                    </div>
+                    <div>
+                        <h3>PostgreSQL</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-express-original"></i>
+                    </div>
+                    <div>
+                        <h3>Express</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-rails-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Rails</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-jasmine-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Jasmine</h3>
+                    </div>
+                </div>
+                <!-- <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-visualstudio-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Visual Studio</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-atom-original"></i>
+                    </div>
+                    <div>
+                        <h3>Atom</h3>
+                    </div>
+                </div> -->
+                <!-- <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-trello-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Trello</h3>
+                    </div>
+                </div> -->
             </div>
         </div>
         <div id="container" data-aos="fade-in" data-aos-delay="300">
-            <h2>Projects</h2>
+            <h2>PROJECTS</h2>
 
             <div id="projects">
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
-                    <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="Back end" />
+                    <img src="./images/run-on-bank.jpg" class="img-responsive img-thumbnail" alt="Back end" />
                     <div class="project-name">
-                        <a href="https://github.com/CharlyMannion">Back End</a>
+                        <a href="https://github.com/CharlyMannion/bank-tech-test">Bank Tech Test</a>
                     </div>
                 </div>
-                <div class="project" data-aos="fade-in" data-aos-delay="300">
+                <!-- <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="front end" />
                     <div class="project-name">
                         <a href="https://github.com/CharlyMannion">Front End</a>
@@ -41,11 +172,11 @@
                         <a href="https://github.com/CharlyMannion">Final Project</a>
 
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div id="container" data-aos="fade-in" data-aos-delay="150">
-            <h2>Interests</h2>
+            <h2>INTERESTS</h2>
 
             <div id="interests">
                 <div class="interest">
