--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <h3>Jasmine</h3>
                     </div>
                 </div>
-                <!-- <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
                         <i class="devicon-visualstudio-plain"></i>
                     </div>
@@ -138,15 +138,15 @@
                     <div>
                         <h3>Atom</h3>
                     </div>
-                </div> -->
-                <!-- <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
                         <i class="devicon-trello-plain"></i>
                     </div>
                     <div>
                         <h3>Trello</h3>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <div id="container" data-aos="fade-in" data-aos-delay="300">
