changes to black and refactors contacts

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
-                        <i class="devicon-css3-plain"></i>
+                        <i class="devicon-css3-plain colored"></i>
                     </div>
                     <div>
                         <h3>CSS</h3>
@@ -193,8 +193,54 @@
                 </div>
             </div>
         </div>
-        <div id="contact" data-aos="fade-in" data-aos-delay="150">
-            <p align="center">
+
+        <div id="contacts" data-aos="fade-in" data-aos-delay="150">
+            <h2>CONTACT ME</h2>
+            <div id="contacts-body" data-aos="fade-in" data-aos-delay="300">
+                <div id="contact" data-aos="fade-in" data-aos-delay="300">
+                    <div id=contact-icon>
+                        <i href="mailto:charlottemannion100@gmail.com">
+                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
+                    </div>
+                </div>
+
+                <div id="contact" data-aos="fade-in" data-aos-delay="300">
+
+                    <div id=contact-icon>
+                        <i href="mailto:charlottemannion100@gmail.com">
+                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
+                    </div>
+                </div>
+
+                <div id="contact" data-aos="fade-in" data-aos-delay="300">
+
+                    <div id=contact-icon>
+                        <i href="mailto:charlottemannion100@gmail.com">
+                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
+                    </div>
+                </div>
+
+                <div id="contact" data-aos="fade-in" data-aos-delay="300">
+
+                    <div id=contact-icon>
+                        <i href="mailto:charlottemannion100@gmail.com">
+                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
+                    </div>
+                </div>
+
+                <div id="contact" data-aos="fade-in" data-aos-delay="300">
+
+                    <div id=contact-icon>
+                        <i href="mailto:charlottemannion100@gmail.com">
+                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- <p align="center">
                 <a href="mailto:charlottemannion100@gmail.com">
                     <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></a>
                 <a href="https://www.linkedin.com/in/charly-mannion-75483523/">
@@ -205,8 +251,8 @@
                     <img src="./images/iconfinder_social_media_logo_github_1221585.png" alt="github" hspace="50" height="42" width="42"></a>
                 <a href="https://twitter.com/Charly_Mannion">
                     <img src="./images/iconfinder_twitter_circle_294709.png" alt="twitter" hspace="50" height="42" width="42"></a>
-            </p>
-        </div>
+            </p> -->
+    </div>
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
