--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <!-- <script data-who="💎 Made with naker.io 💎" src="https://d23jutsnau9x47.cloudfront.net/back/v1.0.9/viewer.js" data-option="{|environment|:{|gradient|:|horizontal|,|sensitivity|:0.77,|colorStart|:[199,199,199,1],|colorEnd|:[20,31,48,1]},|particle|:{|life|:5,|power|:0.02,|texture|:|https://res.cloudinary.com/naker-io/image/upload/v1566560053/circle_05.png|,|number|:565,|colorStart|:[116,129,92,0.13],|colorEnd|:[198,188,107,0.52],|sizeStart|:1.65,|sizeEnd|:3.3,|direction1|:{|x|:0,|y|:100,|z|:100},|direction2|:{|x|:0,|y|:0,|z|:0}},|waterMark|:false}"
+        data-container="particle-background"></script> -->
     <div id="homepage">
         <div id="title" data-aos="fade-in" data-aos-delay="300">
             <img src="./images/meTokyo.jpg" alt="me in Tokyo">
@@ -156,17 +158,19 @@
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/run-on-bank.jpg" class="img-responsive img-thumbnail" alt="Back end" />
                     <div class="project-name">
-                        <a href="https://github.com/CharlyMannion/bank-tech-test">Bank Tech Test</a>
-                    </div>
-                </div>
-                <!-- <div class="project" data-aos="fade-in" data-aos-delay="300">
-                    <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="front end" />
-                    <div class="project-name">
-                        <a href="https://github.com/CharlyMannion">Front End</a>
-
+                        <a href="https://github.com/CharlyMannion/bank-tech-test">
+                            <h2>Bank Tech Test</h2>
+                        </a>
                     </div>
                 </div>
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
+                    <img src="./images/cv.png" class="img-responsive img-thumbnail" alt="front end" />
+                    <div class="project-name">
+                        <a href="https://github.com/CharlyMannion/CMannion_CV/"></a>
+                        <h2>Github CV</h2>
+                    </div>
+                </div>
+                <!-- <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="final project" />
                     <div class="project-name">
                         <a href="https://github.com/CharlyMannion">Final Project</a>
@@ -181,21 +185,21 @@
             <div id="interests">
                 <div class="interest">
                     <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="Crochet" />
-                    <!-- <div class="project-name">Crochet</div> -->
+                    <h3>Crochet</h3>
                 </div>
                 <div class="interest">
                     <img src="./images/bouldering.jpg" class="img-responsive img-thumbnail" alt="Climbing" />
-                    <!-- <div class="project-name">Climbing</div> -->
+                    <h3>Bouldering</h3>
                 </div>
                 <div class="interest">
                     <img src="./images/beach2.jpg" class="img-responsive img-thumbnail" alt="Photography" />
-                    <!-- <div class="project-name">Photography</div> -->
+                    <h3>Photography</h3>
                 </div>
             </div>
         </div>
 
         <div id="contacts" data-aos="fade-in" data-aos-delay="150">
-            <h2>CONTACT ME</h2>
+            <h2>SOCIAL</h2>
             <div id="contacts-body" data-aos="fade-in" data-aos-delay="300">
                 <div id="contact" data-aos="fade-in" data-aos-delay="300">
                     <div id=contact-icon>
@@ -207,32 +211,32 @@
                 <div id="contact" data-aos="fade-in" data-aos-delay="300">
 
                     <div id=contact-icon>
-                        <i href="mailto:charlottemannion100@gmail.com">
-                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
+                        <i href="https://github.com/CharlyMannion/CMannion_CV/">
+                            <img src="./images/iconfinder_social_media_logo_github_1221585.png" alt="github" hspace="50" height="42" width="42"></i>
+                    </div>
+                </div>
+
+                <!-- <div id="contact" data-aos="fade-in" data-aos-delay="300">
+
+                    <div id=contact-icon>
+                        <i href="https://github.com/CharlyMannion">
+                            <img src="https://cdn2.iconfinder.com/data/icons/identificon/96/cv-512.png" alt="CV" hspace="50" height="42" width="42"></i>
+                    </div>
+                </div> -->
+
+                <div id="contact" data-aos="fade-in" data-aos-delay="300">
+
+                    <div id=contact-icon>
+                        <i href="https://www.linkedin.com/in/charly-mannion-75483523/">
+                            <img src="https://www.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt="linkedin" hspace="50" height="42" width="42"></i>
                     </div>
                 </div>
 
                 <div id="contact" data-aos="fade-in" data-aos-delay="300">
 
                     <div id=contact-icon>
-                        <i href="mailto:charlottemannion100@gmail.com">
-                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
-                    </div>
-                </div>
-
-                <div id="contact" data-aos="fade-in" data-aos-delay="300">
-
-                    <div id=contact-icon>
-                        <i href="mailto:charlottemannion100@gmail.com">
-                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
-                    </div>
-                </div>
-
-                <div id="contact" data-aos="fade-in" data-aos-delay="300">
-
-                    <div id=contact-icon>
-                        <i href="mailto:charlottemannion100@gmail.com">
-                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
+                        <i href="https://twitter.com/Charly_Mannion">
+                            <img src="./images/iconfinder_twitter_circle_294709.png" alt="twitter" hspace="50" height="42" width="42"></i>
                     </div>
                 </div>
 
@@ -240,18 +244,6 @@
         </div>
     </div>
     </div>
-    <!-- <p align="center">
-                <a href="mailto:charlottemannion100@gmail.com">
-                    <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></a>
-                <a href="https://www.linkedin.com/in/charly-mannion-75483523/">
-                    <img src="https://www.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt="linkedin" hspace="50" height="42" width="42"></a>
-                <a href="https://github.com/CharlyMannion/CMannion_CV/">
-                    <img src="https://cdn2.iconfinder.com/data/icons/identificon/96/cv-512.png" alt="CV" hspace="50" height="42" width="42"></a>
-                <a href="https://github.com/CharlyMannion">
-                    <img src="./images/iconfinder_social_media_logo_github_1221585.png" alt="github" hspace="50" height="42" width="42"></a>
-                <a href="https://twitter.com/Charly_Mannion">
-                    <img src="./images/iconfinder_twitter_circle_294709.png" alt="twitter" hspace="50" height="42" width="42"></a>
-            </p> -->
     </div>
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
