makes icons smaller

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="./images/meTokyo.jpg" alt="me in Tokyo">
             <div id="name-and-description">
                 <h1>Charly Mannion</h1>
-                <p>Software Engineer</p>
+                <!-- <p>Software Engineer</p> -->
             </div>
         </div>
         <div id="skills" data-aos="fade-in" data-aos-delay="300">
