redoes contacts section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+    <script src="https://kit.fontawesome.com/b8ef7b7761.js" crossorigin="anonymous"></script>
+
 
 </head>
 
@@ -20,7 +22,6 @@
             <img src="./images/meTokyo.jpg" alt="me in Tokyo">
             <div id="name-and-description">
                 <h1>Charly Mannion</h1>
-                <!-- <p>Software Engineer</p> -->
             </div>
         </div>
         <div id="skills" data-aos="fade-in" data-aos-delay="300">
@@ -197,49 +198,24 @@
                 </div>
             </div>
         </div>
-
-        <div id="contacts" data-aos="fade-in" data-aos-delay="150">
+        <div id="container" data-aos="fade-in" data-aos-delay="150">
             <h2>SOCIAL</h2>
-            <div id="contacts-body" data-aos="fade-in" data-aos-delay="300">
-                <div id="contact" data-aos="fade-in" data-aos-delay="300">
-                    <div id=contact-icon>
-                        <i href="mailto:charlottemannion100@gmail.com">
-                            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-128.png" alt="gmal" hspace="50" height="42" width="42"></i>
-                    </div>
+            <div id="contacts">
+                <div class="contact">
+                    <a href="https://github.com/CharlyMannion"><i class="devicon-github-plain-wordmark"></i></a>
                 </div>
-
-                <div id="contact" data-aos="fade-in" data-aos-delay="300">
-
-                    <div id=contact-icon>
-                        <i href="https://github.com/CharlyMannion/CMannion_CV/">
-                            <img src="./images/iconfinder_social_media_logo_github_1221585.png" alt="github" hspace="50" height="42" width="42"></i>
-                    </div>
+                <div class="contact">
+                    <a href="mailto:charlottemannion100@gmail.com"><i class="fas fa-envelope-open-text"></i></a>
                 </div>
-
-                <!-- <div id="contact" data-aos="fade-in" data-aos-delay="300">
-
-                    <div id=contact-icon>
-                        <i href="https://github.com/CharlyMannion">
-                            <img src="https://cdn2.iconfinder.com/data/icons/identificon/96/cv-512.png" alt="CV" hspace="50" height="42" width="42"></i>
-                    </div>
-                </div> -->
-
-                <div id="contact" data-aos="fade-in" data-aos-delay="300">
-
-                    <div id=contact-icon>
-                        <i href="https://www.linkedin.com/in/charly-mannion-75483523/">
-                            <img src="https://www.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt="linkedin" hspace="50" height="42" width="42"></i>
-                    </div>
+                <div class="contact">
+                    <a href="https://twitter.com/Charly_Mannion"><i class="fab fa-twitter"></i></a>
                 </div>
-
-                <div id="contact" data-aos="fade-in" data-aos-delay="300">
-
-                    <div id=contact-icon>
-                        <i href="https://twitter.com/Charly_Mannion">
-                            <img src="./images/iconfinder_twitter_circle_294709.png" alt="twitter" hspace="50" height="42" width="42"></i>
-                    </div>
+                <div class="contact">
+                    <a href="https://www.linkedin.com/in/charly-mannion-75483523/"><i class="fab fa-linkedin"></i></a>
                 </div>
-
+                <div class="contact">
+                    <a href="https://github.com/CharlyMannion/CMannion_CV/"><i class="fas fa-file-alt"></i></a>
+                </div>
             </div>
         </div>
     </div>
