adds more fading

--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@
         <div id="container" data-aos="fade-in" data-aos-delay="150">
             <h2>INTERESTS</h2>
 
-            <div id="interests">
+            <div id="interests" data-aos="fade-in" data-aos-delay="300">
                 <div class="interest">
                     <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="Crochet" />
                     <h3>Crochet</h3>
                 </div>
-                <div class="interest">
+                <div class="interest" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/bouldering.jpg" class="img-responsive img-thumbnail" alt="Climbing" />
                     <h3>Bouldering</h3>
                 </div>
-                <div class="interest">
+                <div class="interest" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/beach2.jpg" class="img-responsive img-thumbnail" alt="Photography" />
                     <h3>Photography</h3>
                 </div>
@@ -200,20 +200,20 @@
         </div>
         <div id="container" data-aos="fade-in" data-aos-delay="150">
             <h2>SOCIAL</h2>
-            <div id="contacts">
-                <div class="contact">
+            <div id="contacts" data-aos="fade-in" data-aos-delay="300">
+                <div class="contact" data-aos="fade-in" data-aos-delay="300">
                     <a href="https://github.com/CharlyMannion"><i class="devicon-github-plain-wordmark"></i></a>
                 </div>
-                <div class="contact">
+                <div class="contact" data-aos="fade-in" data-aos-delay="300">
                     <a href="mailto:charlottemannion100@gmail.com"><i class="fas fa-envelope-open-text"></i></a>
                 </div>
-                <div class="contact">
+                <div class="contact" data-aos="fade-in" data-aos-delay="300">
                     <a href="https://twitter.com/Charly_Mannion"><i class="fab fa-twitter"></i></a>
                 </div>
-                <div class="contact">
+                <div class="contact" data-aos="fade-in" data-aos-delay="300">
                     <a href="https://www.linkedin.com/in/charly-mannion-75483523/"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <div class="contact">
+                <div class="contact" data-aos="fade-in" data-aos-delay="300">
                     <a href="https://github.com/CharlyMannion/CMannion_CV/"><i class="fas fa-file-alt"></i></a>
                 </div>
             </div>
