--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                         <h2>Github CV</h2>
                     </div>
                 </div>
-                <!-- <div class="project" data-aos="fade-in" data-aos-delay="300">
-                    <img src="./images/corchetjasmine.jpg" class="img-responsive img-thumbnail" alt="final project" />
+                <div class="project" data-aos="fade-in" data-aos-delay="300">
+                    <img src="./images/Screenshot 2020-10-02 at 14.00.35.png" class="img-responsive img-thumbnail" alt="final project" />
                     <div class="project-name">
-                        <a href="https://github.com/CharlyMannion">Final Project</a>
+                        <a href="https://github.com/CharlyMannion/ThermostatSolo">Thermostat</a>
 
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <div id="container" data-aos="fade-in" data-aos-delay="150">
