--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/Screenshot 2020-10-02 at 14.00.35.png" class="img-responsive img-thumbnail" alt="final project" />
                     <div class="project-name">
-                        <a href="https://github.com/CharlyMannion/ThermostatSolo">Thermostat</a>
-
+                        <a href="https://github.com/CharlyMannion/ThermostatSolo"></a>
+                        <h2>Thermostat</h2>
                     </div>
                 </div>
             </div>
