moves thermostat up

--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 
             <div id="projects">
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
+                    <img src="./images/Screenshot 2020-10-02 at 14.00.35.png" class="img-responsive img-thumbnail" alt="final project" />
+                    <div class="project-name">
+                        <a href="https://charlymannion.github.io/ThermostatSolo/"></a>
+                        <h2>Thermostat</h2>
+                    </div>
+                </div>
+                <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/run-on-bank.jpg" class="img-responsive img-thumbnail" alt="Back end" />
                     <div class="project-name">
                         <a href="https://github.com/CharlyMannion/bank-tech-test">
@@ -166,15 +173,9 @@
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/cv.png" class="img-responsive img-thumbnail" alt="front end" />
                     <div class="project-name">
+                        <!-- <a href="https://charlymannion.github.io/CMannion_CV/"></a> -->
                         <a href="https://github.com/CharlyMannion/CMannion_CV/"></a>
                         <h2>Github CV</h2>
-                    </div>
-                </div>
-                <div class="project" data-aos="fade-in" data-aos-delay="300">
-                    <img src="./images/Screenshot 2020-10-02 at 14.00.35.png" class="img-responsive img-thumbnail" alt="final project" />
-                    <div class="project-name">
-                        <a href="https://github.com/CharlyMannion/ThermostatSolo"></a>
-                        <h2>Thermostat</h2>
                     </div>
                 </div>
             </div>
