adds another therm image

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
             <div id="projects">
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
-                    <img src="./images/thermMobile.png" class="img-responsive img-thumbnail" alt="final project" />
+                    <img src="./images/bees.png" class="img-responsive img-thumbnail" alt="final project" />
                     <div class="project-name">
                         <a href="https://charlymannion.github.io/ThermostatSolo/"></a>
                         <h2>Thermostat</h2>
