reformats skills to be colourful

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="skill-body" data-aos="fade-in" data-aos-delay="300">
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
-                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-javascript-plain colored"></i>
                     </div>
                     <div>
                         <h3>Javascript</h3>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
-                        <i class="devicon-nodejs-plain"></i>
+                        <i class="devicon-nodejs-plain colored"></i>
                     </div>
                     <div>
                         <h3>nodejs</h3>
@@ -47,58 +47,10 @@
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
-                        <i class="devicon-react-original"></i>
+                        <i class="devicon-react-original colored"></i>
                     </div>
                     <div>
                         <h3>React</h3>
-                    </div>
-                </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="300">
-                    <div class="icon-container">
-                        <i class="devicon-ruby-plain"></i>
-                    </div>
-                    <div>
-                        <h3>Ruby</h3>
-                    </div>
-                </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="300">
-                    <div class="icon-container">
-                        <i class="devicon-swift-plain"></i>
-                    </div>
-                    <div>
-                        <h3>Swift</h3>
-                    </div>
-                </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="300">
-                    <div class="icon-container">
-                        <i class="devicon-github-plain"></i>
-                    </div>
-                    <div>
-                        <h3>Github</h3>
-                    </div>
-                </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="300">
-                    <div class="icon-container">
-                        <i class="devicon-css3-plain colored"></i>
-                    </div>
-                    <div>
-                        <h3>CSS</h3>
-                    </div>
-                </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="300">
-                    <div class="icon-container">
-                        <i class="devicon-html5-plain"></i>
-                    </div>
-                    <div>
-                        <h3>HTML</h3>
-                    </div>
-                </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="300">
-                    <div class="icon-container">
-                        <i class="devicon-postgresql-plain"></i>
-                    </div>
-                    <div>
-                        <h3>PostgreSQL</h3>
                     </div>
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
@@ -111,15 +63,71 @@
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
-                        <i class="devicon-rails-plain"></i>
+                        <i class="devicon-swift-plain colored"></i>
                     </div>
                     <div>
-                        <h3>Rails</h3>
+                        <h3>Swift</h3>
                     </div>
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
-                        <i class="devicon-jasmine-plain"></i>
+                        <i class="devicon-jquery-plain colored"></i>
+                    </div>
+                    <div>
+                        <h3>jquery</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-github-plain"></i>
+                    </div>
+                    <div>
+                        <h3>Github</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-ruby-plain colored"></i>
+                    </div>
+                    <div>
+                        <h3>Ruby</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-css3-plain colored"></i>
+                    </div>
+                    <div>
+                        <h3>CSS</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-postgresql-plain"></i>
+                    </div>
+                    <div>
+                        <h3>PostgreSQL</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-html5-plain colored"></i>
+                    </div>
+                    <div>
+                        <h3>HTML</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-visualstudio-plain colored"></i>
+                    </div>
+                    <div>
+                        <h3>Visual Studio</h3>
+                    </div>
+                </div>
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                    <div class="icon-container">
+                        <i class="devicon-jasmine-plain colored"></i>
                     </div>
                     <div>
                         <h3>Jasmine</h3>
@@ -127,10 +135,10 @@
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
-                        <i class="devicon-visualstudio-plain"></i>
+                        <i class="devicon-rails-plain colored"></i>
                     </div>
                     <div>
-                        <h3>Visual Studio</h3>
+                        <h3>Rails</h3>
                     </div>
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
@@ -143,7 +151,7 @@
                 </div>
                 <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
-                        <i class="devicon-trello-plain"></i>
+                        <i class="devicon-trello-plain colored"></i>
                     </div>
                     <div>
                         <h3>Trello</h3>
@@ -173,7 +181,6 @@
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/cv.png" class="img-responsive img-thumbnail" alt="front end" />
                     <div class="project-name">
-                        <!-- <a href="https://charlymannion.github.io/CMannion_CV/"></a> -->
                         <a href="https://github.com/CharlyMannion/CMannion_CV/"></a>
                         <h2>Github CV</h2>
                     </div>
