adds rick and morty api

--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
 
             <div id="projects">
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
+                    <img src="./images/b6740400-92d4-11ea-8a13-d5f6e0558e9b.png" class="img-responsive img-thumbnail" alt="final project" />
+                    <div class="project-name">
+                        <a href="https://github.com/CharlyMannion/rick_and_mortyfied-api"></a>
+                        <h2>Rick & Mortyfied API</h2>
+                    </div>
+                </div>
+                <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/bees.png" class="img-responsive img-thumbnail" alt="final project" />
                     <div class="project-name">
                         <a href="https://charlymannion.github.io/ThermostatSolo/"></a>
