--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
                         <a href="https://github.com/CharlyMannion/rick_and_mortyfied-api"></a>
                         <h2>Rick & Mortyfied API</h2>
                     </div>
-                </div>
+<!--                 </div>
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/bees.png" class="img-responsive img-thumbnail" alt="final project" />
                     <div class="project-name">
                         <a href="https://charlymannion.github.io/ThermostatSolo/"></a>
                         <h2>Thermostat</h2>
                     </div>
-                </div>
+                </div> -->
                 <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/run-on-bank.jpg" class="img-responsive img-thumbnail" alt="Back end" />
                     <div class="project-name">
