--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                         <a href="https://github.com/CharlyMannion/rick_and_mortyfied-api"></a>
                         <h2>Rick & Mortyfied API</h2>
                     </div>
-<!--                 </div>
-                <div class="project" data-aos="fade-in" data-aos-delay="300">
+          </div>
+<!--                 <div class="project" data-aos="fade-in" data-aos-delay="300">
                     <img src="./images/bees.png" class="img-responsive img-thumbnail" alt="final project" />
                     <div class="project-name">
                         <a href="https://charlymannion.github.io/ThermostatSolo/"></a>
